--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,7 @@ jobs:
         name: Set up Go
         uses: actions/setup-go@v2
         with:
-          stable: false
-          go-version: '1.16.0-beta1'
+          go-version: '1.16'
       -
         name: Cache Go modules
         uses: actions/cache@v2.1.4
