fix: run on push
Signed-off-by: Carlos Alexandro Becker <caarlos0@gmail.com>

--- a/.github/workflows/misspell.yml
+++ b/.github/workflows/misspell.yml
@@ -1,5 +1,12 @@
 name: misspell
-on: [pull_request]
+on:
+  push:
+    tags:
+      - v*
+    branches:
+      - master
+      - main
+  pull_request:
 jobs:
   misspell:
     name: runner / misspell
