--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,15 +8,16 @@ builds:
 - env:
     - CGO_ENABLED=0
   goos:
-    - linux
+#    - linux
     - darwin
-    - windows
+#    - windows
   goarch:
-    - 386
+#    - 386
     - amd64
-    - arm
+#    - arm
     - arm64
   mod_timestamp: '{{ .CommitTimestamp }}'
+  proxy: '{{ .ModulePath }}'
   flags:
     - -trimpath
   ldflags:
