--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,9 +1,9 @@
 env:
   - GO111MODULE=on
-before:
-  hooks:
-    - go mod tidy
-    - ./scripts/completions.sh
+#before:
+#  hooks:
+#    - go mod tidy
+#    - ./scripts/completions.sh
 builds:
 - env:
     - CGO_ENABLED=0
