--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -17,7 +17,9 @@ builds:
 #    - arm
     - arm64
   mod_timestamp: '{{ .CommitTimestamp }}'
-  proxy: '{{ .ModulePath }}'
+  proxy:
+    path: '{{ .ModulePath }}'
+    version: '{{ .Tag }}'
   flags:
     - -trimpath
   ldflags:
