--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,12 +12,12 @@ builds:
   goos:
     - linux
     - darwin
-#    - windows
+    - windows
   goarch:
-#    - 386
+    - 386
     - amd64
-#    - arm
-#    - arm64
+    - arm
+    - arm64
   mod_timestamp: '{{ .CommitTimestamp }}'
   flags:
     - -trimpath
