--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,4 +94,9 @@ jobs:
           TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-        run: ./goreleaser --auto-snapshot
+        run: |
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            ./goreleaser --auto-snapshot
+          elif [[ $GITHUB_REF == refs/heads/master ]]; then
+            ./goreleaser --snapshot
+          fi
