feat: use htmltest action
Signed-off-by: Carlos A Becker <caarlos0@gmail.com>

--- a/www/htmltest.yml
+++ b/www/htmltest.yml
@@ -9,6 +9,7 @@ IgnoreDirs:
 - overrides
 IgnoreDirectoryMissingTrailingSlash: true
 IgnoreAltMissing: true
+ExternalTimeout: 60
 HTTPHeaders:
   "Range": "bytes=0-10"
   "Accept": "*/*"
