--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -202,3 +202,8 @@ announce:
   twitter:
     enabled: true
     message_template: 'GoReleaser {{ .Tag }} was just released! Get it while its fresh: https://github.com/goreleaser/goreleaser/releases/tag/{{ .Tag }}'
+  reddit:
+    enabled: true
+    title_template: 'GoReleaser {{ .Tag }} was just released!'
+    url_template: 'https://github.com/goreleaser/goreleaser/releases/tag/{{ .Tag }}'
+    sub: test
