--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -69,36 +69,47 @@ nav:
   - ci/travis.md
 - Customization:
   - About: customization/index.md
-  - customization/announce.md
-  - customization/archive.md
-  - customization/artifactory.md
-  - customization/blob.md
-  - customization/build.md
-  - customization/checksum.md
-  - customization/dist.md
-  - customization/docker.md
-  - customization/docker_manifest.md
-  - customization/docker_sign.md
-  - customization/env.md
-  - customization/fury.md
-  - customization/gomod.md
-  - customization/homebrew.md
-  - customization/hooks.md
-  - customization/includes.md
-  - customization/milestone.md
-  - customization/monorepo.md
-  - customization/nfpm.md
-  - customization/nightly.md
-  - customization/project.md
-  - customization/publishers.md
-  - customization/release.md
-  - customization/scoop.md
-  - customization/sign.md
-  - customization/snapcraft.md
-  - customization/snapshots.md
-  - customization/source.md
+  - Basics:
+    - customization/env.md
+    - customization/build.md
+    - customization/archive.md
+    - customization/checksum.md
+    - customization/gomod.md
+    - customization/hooks.md
+    - customization/includes.md
+    - customization/monorepo.md
+    - customization/dist.md
+    - customization/project.md
+    - customization/sign.md
+  - Docker:
+    - Docker Images: customization/docker.md
+    - Docker Manifests: customization/docker_manifest.md
+    - Docker Signing: customization/docker_sign.md
+  - Linux Packaging:
+    - customization/nfpm.md
+    - customization/snapcraft.md
+  - Publish:
+    - customization/artifactory.md
+    - customization/blob.md
+    - customization/fury.md
+    - customization/homebrew.md
+    - customization/milestone.md
+    - customization/publishers.md
+    - customization/release.md
+    - customization/scoop.md
+    - customization/source.md
+    - customization/upload.md
+    - customization/snapshots.md
+    - customization/nightly.md
+  - Announce:
+      - About: customization/announce/index.md
+      - customization/announce/discord.md
+      - customization/announce/reddit.md
+      - customization/announce/slack.md
+      - customization/announce/smtp.md
+      - customization/announce/teams.md
+      - customization/announce/twitter.md
   - customization/templates.md
-  - customization/upload.md
 - Command Line Usage:
     - goreleaser: cmd/goreleaser.md
     - goreleaser init: cmd/goreleaser_init.md
