fix: vercel config
Signed-off-by: Carlos Alexandro Becker <caarlos0@gmail.com>

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-	"rewrites": [
-		{
-			"source": "/:path*",
-			"destination": "/does-this-even-work"
-		}
-	]
+	"trailingSlash": true,
+	"github": {
+		"silent": true,
+		"autoJobCancelation": true
+	}
 }
