--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
     - customization/build.md
     - customization/gomod.md
     - customization/monorepo.md
+    - customization/fatbinaries.md
   - Packaging and Archiving:
     - customization/archive.md
     - customization/nfpm.md
