--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,6 +33,9 @@ builds:
   ldflags:
     - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X main.builtBy=goreleaser
 
+macos_fat_binaries:
+- replace_plain_binaries: true
+
 checksum:
   name_template: 'checksums.txt'
 
