fix: rename prop
Signed-off-by: Carlos A Becker <caarlos0@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,7 +34,7 @@ builds:
     - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X main.builtBy=goreleaser
 
 universal_binaries:
-- replace_plain_binaries: true
+- replace: true
 
 checksum:
   name_template: 'checksums.txt'
