--- a/internal/pipe/krew/testdata/TestFullPipe/default.yaml
+++ b/internal/pipe/krew/testdata/TestFullPipe/default.yaml
@@ -1,9 +1,9 @@
 apiVersion: krew.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
-  name: default_gitlab
+  name: default
 spec:
-  version: 1.0.1
+  version: v1.0.1
   platforms:
   - bin: name
     uri: https://dummyhost/download/v1.0.1/bin.tar.gz
@@ -13,5 +13,5 @@ spec:
         os: darwin
         arch: amd64
   shortDescription: short desc honk
-  homepage: https://gitlab.com/goreleaser
+  homepage: https://github.com/goreleaser
   description: A run pipe test krew plugin and FOO=foo_is_bar
