--- a/internal/pipe/krew/testdata/TestRunPipeNameTemplate.yaml
+++ b/internal/pipe/krew/testdata/TestRunPipeNameTemplate.yaml
@@ -1,9 +1,9 @@
 apiVersion: krew.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
-  name: foo_is_bar
+  name: TestRunPipeNameTemplate
 spec:
-  version: 1.0.1
+  version: v1.0.1
   platforms:
   - bin: foo
     uri: https://dummyhost/download/v1.0.1/bin.tar.gz
@@ -12,3 +12,5 @@ spec:
       matchLabels:
         os: darwin
         arch: amd64
+  shortDescription: Short desc
+  description: Some desc
