--- a/internal/pipe/krew/testdata/TestRunPipeUniversalBinary.yaml
+++ b/internal/pipe/krew/testdata/TestRunPipeUniversalBinary.yaml
@@ -1,9 +1,9 @@
 apiVersion: krew.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
-  name: unibin
+  name: TestRunPipeUniversalBinary
 spec:
-  version: 1.0.1
+  version: v1.0.1
   platforms:
   - bin: unibin
     uri: https://dummyhost/download/v1.0.1/unibin.tar.gz
@@ -19,3 +19,5 @@ spec:
       matchLabels:
         os: darwin
         arch: arm64
+  shortDescription: Short desc
+  description: Some desc
