--- a/internal/pipe/krew/testdata/TestRunPipeForMultipleArmVersions/multiple_armv5.yaml
+++ b/internal/pipe/krew/testdata/TestRunPipeForMultipleArmVersions/multiple_armv5.yaml
@@ -28,4 +28,4 @@ spec:
         arch: arm
   shortDescription: Short desc
   homepage: https://github.com/goreleaser
-  description: A run pipe test krew plugin and FOO=foo_is_bar
+  description: A run pipe test krew manifest and FOO=foo_is_bar
