--- a/internal/pipe/krew/testdata/TestFullManifest.yaml
+++ b/internal/pipe/krew/testdata/TestFullManifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: krew.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
-  name: TestPluginSimple
+  name: TestFullManifest
 spec:
   version: v0.1.3
   platforms:
