fix: previous tag will never be a commit
Signed-off-by: Carlos A Becker <caarlos0@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -60,7 +60,6 @@ changelog:
     - title: Other work
       order: 999
 
-
 dockers:
 - image_templates:
   - 'goreleaser/goreleaser:{{ .Tag }}-amd64'
@@ -226,6 +225,8 @@ release:
   extra_files:
     - glob: ./cosign.pub
   footer: |
+    **Full Changelog**: https://github.com/goreleaser/goreleaser/{{ .PreviousTag }}...{{ .Tag }}
+
     ## What to do next?
 
     - Check out the [GoReleaser Pro](https://goreleaser.com/pro) distribution;
