--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -208,7 +208,7 @@ signs:
   certificate: '{{ trimsuffix .Env.artifact ".txt" }}.pem'
   args:
     - sign-blob
-    - '--oidc-issuer={{if index .Env "CI"}}https://token.actions.githubusercontent.com{{else}}https://oauth2.sigstore.dev/auth{{end}}'
+    - '--oidc-issuer=https://token.actions.githubusercontent.com'
     - '--output-certificate=${certificate}'
     - '--output-signature=${signature}'
     - '${artifact}'
@@ -220,7 +220,7 @@ docker_signs:
     artifacts: manifests
     args:
     - 'sign'
-    - '--oidc-issuer={{if index .Env "CI"}}https://token.actions.githubusercontent.com{{else}}https://oauth2.sigstore.dev/auth{{end}}'
+    - '--oidc-issuer=https://token.actions.githubusercontent.com'
     - '${artifact}'
 
 publishers:
