--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -122,6 +122,7 @@ nav:
       - customization/announce/teams.md
       - customization/announce/telegram.md
       - customization/announce/twitter.md
+      - customization/announce/webhook.md
 - Command Line Usage:
     - goreleaser: cmd/goreleaser.md
     - goreleaser init: cmd/goreleaser_init.md
