--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -203,13 +203,17 @@ snapcrafts:
 
 signs:
 - cmd: cosign
-  stdin: '{{ .Env.COSIGN_PWD }}'
-  args: ["sign-blob", "-key=cosign.key", "-output=${signature}", "${artifact}"]
+  output: true
+  env: ['COSIGN_EXPERIMENTAL=1']
+  certificate: checksums.pem
+  args: ["sign-blob", "--output-signature=${signature}", "--output-certificate=${certificate}", "${artifact}"]
   artifacts: checksum
 
 docker_signs:
 - artifacts: manifests
-  stdin: '{{ .Env.COSIGN_PWD }}'
+  env: ['COSIGN_EXPERIMENTAL=1']
+  certificate: docker.pem
+  args: ["sign", "--output-signature=${signature}", "--output-certificate=${certificate}", "${artifact}"]
 
 publishers:
   - name: fury.io
