feat: Introduce extrafiles pipe and top-level extra_files configuration
Reference: https://github.com/goreleaser/goreleaser/issues/2768
Reference: https://github.com/goreleaser/goreleaser/pull/2770

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
     - customization/hooks.md
     - customization/dist.md
     - customization/project.md
+    - customization/extra_files.md
   - Build:
     - customization/build.md
     - customization/gomod.md
