--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,8 +88,7 @@ jobs:
       - uses: sigstore/cosign-installer@v1.4.1
       - uses: anchore/sbom-action/download-syft@v0.6.0
       - name: setup-validate-krew-manifest
-        # TODO: replace this once https://github.com/kubernetes-sigs/krew/pull/736 is merged
-        run: go install github.com/caarlos0/krew/cmd/validate-krew-manifest@fork
+        run:  go get sigs.k8s.io/krew/cmd/validate-krew-manifest@$latest
       - run: task ci
       - uses: codecov/codecov-action@v2
         with:
