--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -150,7 +150,7 @@ brews:
       bash_completion.install "completions/goreleaser.bash" => "goreleaser"
       zsh_completion.install "completions/goreleaser.zsh" => "_goreleaser"
       fish_completion.install "completions/goreleaser.fish"
-      man1.install "manpages/"
+      man1.install "manpages/goreleaser.1.gz"
 
 rigs:
   - rig:
@@ -183,8 +183,8 @@ nfpms:
         dst: /usr/share/fish/completions/goreleaser.fish
       - src: ./completions/goreleaser.zsh
         dst: /usr/local/share/zsh/site-functions/_goreleaser
-      - src: ./manpages/*
-        dst: /usr/share/man/man1/
+      - src: ./manpages/goreleaser.1.gz
+        dst: /usr/share/man/man1/goreleaser.1.gz
     formats:
     - apk
     - deb
