docs(cookbooks): Add documentation for how to publish to JFrog artifactory.
This commit adds a new cookbook that covers how to upload to JFrog Artifactory: https://jfrog.com/artifactory/ using the REST API: https://www.jfrog.com/confluence/display/JFROG/Artifactory+REST+API
or the jfrog cli: https://jfrog.com/getcli/

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -146,6 +146,7 @@ nav:
   - cookbooks/cgo-and-crosscompiling.md
   - cookbooks/debconf-templates.md
   - cookbooks/publish-to-nexus.md
+  - cookbooks/publish-to-artifactory.md
   - cookbooks/release-a-library.md
   - cookbooks/semantic-release.md
   - cookbooks/set-a-custom-git-tag.md
