--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -137,6 +137,7 @@ nav:
   - errors/multiple-tokens.md
   - errors/no-main.md
   - errors/resource-not-accessible-by-integration.md
+  - errors/no-history.md
 - deprecations.md
 - Cookbooks:
   - About: cookbooks/index.md
