chore: do not run schedule action on forks
Signed-off-by: Carlos A Becker <caarlos0@gmail.com>

--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   lock:
+    if: github.repository == 'goreleaser/goreleaser'
     runs-on: ubuntu-latest
     steps:
       - uses: dessant/lock-threads@v3
