docs: Add a new cookbook that covers using the jfrog-cli as an alternative to the artifactory publisher to publish to artifactory.
This commit adds a new cookbook that covers using the jfrog-cli as an alternative to the artifactory publisher to publish to artifactory.
The jfrog cli allows storing the artifactory configuration in a configuration file rather than directly in the environment.

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -146,6 +146,7 @@ nav:
   - cookbooks//build-go-modules.md
   - cookbooks/cgo-and-crosscompiling.md
   - cookbooks/debconf-templates.md
+  - cookbooks/using-jfrog-cli-to-publish-to-artifactory.md
   - cookbooks/publish-to-nexus.md
   - cookbooks/release-a-library.md
   - cookbooks/semantic-release.md
