--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,7 +15,7 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: github/codeql-action/init@v1
-    - uses: github/codeql-action/autobuild@v1
-    - uses: github/codeql-action/analyze@v1
+    - uses: actions/checkout@b0e28b5ac45a892f91e7d036f8200cf5ed489415 # v3
+    - uses: github/codeql-action/init@883476649888a9e8e219d5b2e6b789dc024f690c # v1
+    - uses: github/codeql-action/autobuild@883476649888a9e8e219d5b2e6b789dc024f690c # v1
+    - uses: github/codeql-action/analyze@883476649888a9e8e219d5b2e6b789dc024f690c # v1
