--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -14,16 +14,16 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@b0e28b5ac45a892f91e7d036f8200cf5ed489415 # v3
         with:
           token: ${{ secrets.GH_PAT }}
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492 # v2
         with:
           go-version: 1.17
-      - uses: arduino/setup-task@v1
+      - uses: arduino/setup-task@accf38bba955639d21816bb68775e5c48c482182 # v1
       - run: task docs:generate
       - run: task schema:generate
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: stefanzweifel/git-auto-commit-action@5804e42f86b1891093b151b6c4e78e759c746c4d # v4
         with:
           commit_message: "docs: update"
           branch: main
