--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -4,12 +4,18 @@ on:
   schedule:
     - cron: '0 * * * *'
 
+permissions:
+  contents: read
+
 jobs:
   lock:
+    permissions:
+      issues: write  # for dessant/lock-threads to lock issues
+      pull-requests: write  # for dessant/lock-threads to lock PRs
     if: github.repository == 'goreleaser/goreleaser'
     runs-on: ubuntu-latest
     steps:
-      - uses: dessant/lock-threads@v3
+      - uses: dessant/lock-threads@e460dfeb36e731f3aeb214be6b0c9a9d9a67eda6 # v3
         with:
           github-token: ${{ github.token }}
           issue-lock-inactive-days: 30
