--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,8 +83,7 @@ jobs:
       - uses: sigstore/cosign-installer@ab3bb6a537fb08a1b78f7d1175fff799ca6850a3 # v2.1.0
       - uses: anchore/sbom-action/download-syft@407a3ec314b07e326eff3ba171091cbc150460a8 # v0.10.0
       - name: setup-validate-krew-manifest
-        # TODO: replace this once https://github.com/kubernetes-sigs/krew/pull/736 is merged
-        run: go install github.com/caarlos0/krew/cmd/validate-krew-manifest@fork
+        run: go install sigs.k8s.io/krew/cmd/validate-krew-manifest@latest
       - run: task ci
       - uses: codecov/codecov-action@e3c560433a6cc60aec8812599b7844a7b4fa0d71 # v3
         with:
