--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -134,6 +134,7 @@ nav:
 - Common errors:
   - errors/dirty.md
   - errors/multiple-tokens.md
+  - errors/docker-build.md
   - errors/no-main.md
   - errors/resource-not-accessible-by-integration.md
   - errors/no-history.md
