docs: fix several htmltest issues
Signed-off-by: Carlos A Becker <caarlos0@gmail.com>

--- a/www/htmltest.yml
+++ b/www/htmltest.yml
@@ -13,6 +13,8 @@ IgnoreURLs:
 - https://github.com/goreleaser/goreleaser/pkgs
 - https://iron.security
 - https://marketplace.visualstudio.com
+- docs.github.com
+- help.github.com
 IgnoreDirs:
 - overrides
 IgnoreDirectoryMissingTrailingSlash: true
