--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -30,7 +30,7 @@ jobs:
       - run: task schema:generate
       - uses: stefanzweifel/git-auto-commit-action@49620cd3ed21ee620a48530e81dba0d139c9cb80 # v4
         with:
-          commit_message: "docs: update"
+          commit_message: "chore: docs auto-update"
           branch: main
           commit_user_name: actions-user
           commit_user_email: actions@github.com
