--- a/.github/workflows/depsreview.yaml
+++ b/.github/workflows/depsreview.yaml
@@ -1,4 +1,4 @@
-name: 'Dependency Review'
+name: dependency-review
 on: [pull_request]
 
 permissions:
@@ -8,7 +8,5 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout Repository'
-        uses: actions/checkout@v3
-      - name: 'Dependency Review'
-        uses: actions/dependency-review-action@v1
+      - uses: actions/checkout@v3
+      - uses: actions/dependency-review-action@v1
