--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -11,3 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: zricethezav/gitleaks-action@master
+        with:
+          config-path: .github/gitleaks.toml
